--- a/src/components/HowDidIGetHere/HowDidIGetHere.module.css
+++ b/src/components/HowDidIGetHere/HowDidIGetHere.module.css
@@ -27,7 +27,7 @@
   margin: 24px 24px 0 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .howIGotHere {
     flex-direction: column;
     align-items: center;
@@ -37,6 +37,7 @@
   .selfieContainer {
     width: 100%;
     padding: 24px 0;
+    border-bottom: 1px solid #5C7A6E;
   }
 
   .selfie {
