--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -14,3 +14,15 @@
   margin-right: 20px;
   cursor: pointer;
 }
+
+@media (max-width: 1700px) {
+  .profileLink {
+    width: 40px;
+    height: 40px;
+  }
+
+  .logoContainer {
+    width: 26px;
+    height: 26px;
+  }
+}
