--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -1,7 +1,7 @@
 .headerSection {
   display: flex;
   justify-content: center;
-  padding: 42px;
+  padding: 32px;
   position: relative;
   background-color: #2D3A36;
   border-top: 1px solid #5C7A6E;
