--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
 /* Global Styles */
 body, html {
-  height: 100%;
   margin: 0;
   background-color: #252E2B;
   color: white;
+  height: 100%;
   overflow: hidden;
 }
 
 .app {
-  height: 100vh;
   border-right: 1px solid #5C7A6E;
+  overflow-y: auto;
 }
 
 .appContainer {
@@ -18,6 +18,12 @@ body, html {
   justify-content: center;
   margin: auto;
   height: 100vh;
+  overflow: hidden;
+}
+
+.pageContent {
+  display: flex;
+  margin-top: 90px;
 }
 
 .aboutMe {
@@ -27,17 +33,19 @@ body, html {
   padding: 50px;
   margin-right: 71px;
   box-sizing: border-box;
+  flex-shrink: 0;
+  overflow: hidden;
 }
 
 .details {
-  flex: 1; 
   max-width: 754px;
-  overflow-y: auto;
   overflow-x: hidden; 
   padding: 0; 
   box-sizing: border-box;
   border-right: 1px solid #5C7A6E;
   border-left: 1px solid #5C7A6E;
+  flex: 1;
+  overflow-y: auto;
   height: 100vh;
 }
 
@@ -56,10 +64,21 @@ body, html {
 }
 
 @media (max-width: 1700px) {
+  body {
+
+  }
+  .app {
+    border-right: none;
+  }
   .appContainer {
     flex-direction: column;
     align-items: center; 
-    margin: 0;
+    width: 100%;
+    max-width: 754px;
+    margin: 0 auto;
+    padding: 0 20px;
+    overflow-y: auto;
+    height: auto;
   }
   .aboutMe {
     display: flex;
@@ -68,6 +87,9 @@ body, html {
     width: 100%; 
     max-width: 754px;
     margin-right: 0;
+    min-height: 320px;
+    flex: 0;
+    padding: 36px;
     box-sizing: border-box;
     border-right: 1px solid #5C7A6E;
     border-left: 1px solid #5C7A6E;
@@ -76,20 +98,19 @@ body, html {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: auto;
-    overflow-y: auto;
-    overflow-x: hidden;
+    flex: 1;
     box-sizing: border-box;
     border-top: 1px solid #5C7A6E;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .appContainer {
     overflow: hidden;
     display: flex;
     flex-direction: column;
     height: 100vh;
-    margin: 0 10px;
+    border: none;
+    padding: 0;
   }
 }
